--- a/shape.html
+++ b/shape.html
@@ -56,25 +56,11 @@
 		<div class="row left mt mb">
 			<div class="col-lg-8 col-lg-offset-2">
 		<center><h1>Shape</h1></center>
-				<p>Art direction, photography and poster design for Shape, a fashion project by M17 at Beckmans College of Design.
-          The photos also became a part of the exhibition “Mode i sju akter” at Kulturhuset in Stockholm.
-          Made together with Jacob Landahl. </p>
+				<p>100 random 3d-models made during my internship at Wang & Söderström. </p>
 			</div>
 			<div class="col-lg-10 col-lg-offset-1 mthalf">
-				<img class="img-responsive" src="assets/img/shape/trycksak1.jpg"><a/>
-				<br>
-        <img class="img-responsive" src="assets/img/shape/trycksak2.jpg"><a/>
-				<br>
-        <img class="img-responsive" src="assets/img/shape/trycksak3.jpg"><a/>
-				<br>
-        <img class="img-responsive imgdouble imgdouble1" src="assets/img/shape/Daniela_Persichetti.jpg"><a/>
-        <img class="img-responsive imgdouble imgdouble2" src="assets/img/shape/Julia_Andersen.jpg"><a/>
-        <img class="img-responsive imgdouble imgdouble3" src="assets/img/shape/Julie_Borch-Christensen.jpg"><a/>
-        <img class="img-responsive imgdouble imgdouble4" src="assets/img/shape/Disa_Gadd.jpg"><a/>
-        <br>
-        <img class="img-responsive" src="assets/img/shape/1.jpg"><a/>
-        <br>
-        <img class="img-responsive" src="assets/img/shape/2.jpg"><a/>
+				<img class="img-responsive" src="assets/img/random_objects/random_objects.jpg"><a/>
+
 
 			</div><! --/row -->
 		</div><! --/container -->
