--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@ top.location = document.location;
       <div class="col-lg-4 col-md-4 col-sm-4 gallery imgWrap">
 				<a href="cryohabitat.html"><img src="assets/img/thumbs/thumb_kryohabitat.jpg" class="img-responsive"><p class="imgDescription">Cryohabitat</p></a>
 			</div>
+	<div class="col-lg-4 col-md-4 col-sm-4 gallery imgWrap">
+	<a href="random_objects.html"><img src="assets/img/thumbs/thumb_random_objects.jpg" class="img-responsive"><p class="imgDescription">Shape</p></a>
+	</div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery imgWrap">
       	<a href="butterflyeffect.html"><img src="assets/img/thumbs/thumb_butterfly.jpg" class="img-responsive"><p class="imgDescription">The Butterfly Effect</p></a>
       </div>
@@ -82,9 +85,6 @@ top.location = document.location;
       <div class="col-lg-4 col-md-4 col-sm-4 gallery imgWrap">
         <a href="livia.html"><img src="assets/img/thumbs/thumb_livia.jpg" class="img-responsive"><p class="imgDescription">Livia funeral agency</p></a>
       </div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery imgWrap">
-				<a href="shape.html"><img src="assets/img/thumbs/thumb_shape.jpg" class="img-responsive"><p class="imgDescription">Shape</p></a>
-			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 gallery imgWrap">
 				<a href="meursault.html"><img src="assets/img/thumbs/thumb_meursault.jpg" class="img-responsive"><p class="imgDescription">18069 Arthur, Meursault</p></a>
       </div>
