--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ top.location = document.location;
 				<a href="cryohabitat.html"><img src="assets/img/thumbs/thumb_kryohabitat.jpg" class="img-responsive"><p class="imgDescription">Cryohabitat</p></a>
 			</div>
 	<div class="col-lg-4 col-md-4 col-sm-4 gallery imgWrap">
-	<a href="random_objects.html"><img src="assets/img/thumbs/thumb_random_objects.jpg" class="img-responsive"><p class="imgDescription">Shape</p></a>
+	<a href="random_objects.html"><img src="assets/img/thumbs/thumb_random_objects.jpg" class="img-responsive"><p class="imgDescription">Random Objects Model Pack</p></a>
 	</div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery imgWrap">
       	<a href="butterflyeffect.html"><img src="assets/img/thumbs/thumb_butterfly.jpg" class="img-responsive"><p class="imgDescription">The Butterfly Effect</p></a>
