--- a/random_objects.html
+++ b/random_objects.html
@@ -56,7 +56,7 @@
 		<div class="row left mt mb">
 			<div class="col-lg-8 col-lg-offset-2">
 		<center><h1>Shape</h1></center>
-				<p>100 random 3d-models made during my internship at Wang & Söderström. </p>
+				<p>100 3d-models made during my internship at Wang & Söderström. </p>
 			</div>
 			<div class="col-lg-10 col-lg-offset-1 mthalf">
 				<img class="img-responsive" src="assets/img/random_objects/random_objects.jpg"><a/>
