--- a/random_objects.html
+++ b/random_objects.html
@@ -55,7 +55,7 @@
 	<div class="container">
 		<div class="row left mt mb">
 			<div class="col-lg-8 col-lg-offset-2">
-		<center><h1>Shape</h1></center>
+		<center><h1>Random Objects 3D Model Pack</h1></center>
 				<p>100 3d-models made during my internship at Wang & Söderström. </p>
 			</div>
 			<div class="col-lg-10 col-lg-offset-1 mthalf">
