--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ top.location = document.location;
 	<a href="cryohabitat.html"><img src="assets/img/thumbs/thumb_kryohabitat.jpg" class="img-responsive"><p class="imgDescription">Cryohabitat</p></a>
 	</div>
 	<div class="col-lg-4 col-md-4 col-sm-4 gallery imgWrap">
-	<a href="random_objects.html"><img src="assets/img/thumbs/thumb_random_objects.jpg" class="img-responsive"><p class="imgDescription">Random Objects 3D Model Pack</p></a>
+	<a href="randomobjects.html"><img src="assets/img/thumbs/thumb_random_objects.jpg" class="img-responsive"><p class="imgDescription">Random Objects 3D Model Pack</p></a>
 	</div>
 	<div class="col-lg-4 col-md-4 col-sm-4 gallery imgWrap">
         <a href="celsing.html"><img src="assets/img/thumbs/thumb_celsing.jpg" class="img-responsive"><p class="imgDescription">The Sadventures of Peter Celsing</p></a>
