--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@ top.location = document.location;
 	<div class="container">
 		<div class="row centered mt mb">
 
+	<div class="col-lg-4 col-md-4 col-sm-4 gallery imgWrap">
+        <a href="synthetictriggers.html"><img src="assets/img/thumbs/thumb_synthetic_triggers.jpg" class="img-responsive"><p class="imgDescription">Synthetic Triggers</p></a>
+      </div>		
       <div class="col-lg-4 col-md-4 col-sm-4 gallery imgWrap">
         <a href="theglove.html"><img src="assets/img/thumbs/thumb_theglove.jpg" class="img-responsive"><p class="imgDescription">Creation of the Glove</p></a>
       </div>
@@ -81,9 +84,6 @@ top.location = document.location;
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery imgWrap">
         <a href="gradshow2016.html"><img src="assets/img/thumbs/thumb_gradshow.jpg" class="img-responsive"><p class="imgDescription">Grad Show Visuals</p></a>
-      </div>
-      <div class="col-lg-4 col-md-4 col-sm-4 gallery imgWrap">
-        <a href="livia.html"><img src="assets/img/thumbs/thumb_livia.jpg" class="img-responsive"><p class="imgDescription">Livia funeral agency</p></a>
       </div>
 			<div class="col-lg-4 col-md-4 col-sm-4 gallery imgWrap">
 				<a href="meursault.html"><img src="assets/img/thumbs/thumb_meursault.jpg" class="img-responsive"><p class="imgDescription">18069 Arthur, Meursault</p></a>
