--- a/index.html
+++ b/index.html
@@ -74,16 +74,16 @@ top.location = document.location;
 	<a href="cryohabitat.html"><img src="assets/img/thumbs/thumb_kryohabitat.jpg" class="img-responsive"><p class="imgDescription">Cryohabitat</p></a>
 	</div>
 	<div class="col-lg-4 col-md-4 col-sm-4 gallery imgWrap">
-	<a href="randomobjects.html"><img src="assets/img/thumbs/thumb_random_objects.jpg" class="img-responsive"><p class="imgDescription">Random Objects 3D Model Pack</p></a>
+	<a href="randomobjects.html"><img src="assets/img/thumbs/thumb_random_objects.jpg" class="img-responsive"><p class="imgDescription">Random Objects<br>3D Model Pack</p></a>
 	</div>
 	<div class="col-lg-4 col-md-4 col-sm-4 gallery imgWrap">
-        <a href="celsing.html"><img src="assets/img/thumbs/thumb_celsing.jpg" class="img-responsive"><p class="imgDescription">The Sadventures of Peter Celsing</p></a>
+        <a href="celsing.html"><img src="assets/img/thumbs/thumb_celsing.jpg" class="img-responsive"><p class="imgDescription">The Sadventures of<br>Peter Celsing</p></a>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery imgWrap">
       	<a href="butterflyeffect.html"><img src="assets/img/thumbs/thumb_butterfly.jpg" class="img-responsive"><p class="imgDescription">The Butterfly Effect</p></a>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery imgWrap">
-        <a href="gradshow2016.html"><img src="assets/img/thumbs/thumb_gradshow.jpg" class="img-responsive"><p class="imgDescription">Grad Show Visuals</p></a>
+        <a href="gradshow2016.html"><img src="assets/img/thumbs/thumb_gradshow.jpg" class="img-responsive"><p class="imgDescription">Fashion Show Visuals</p></a>
       </div>
 			<div class="col-lg-4 col-md-4 col-sm-4 gallery imgWrap">
 				<a href="meursault.html"><img src="assets/img/thumbs/thumb_meursault.jpg" class="img-responsive"><p class="imgDescription">18069 Arthur, Meursault</p></a>
