--- a/about.html
+++ b/about.html
@@ -63,7 +63,9 @@ top.location = document.location;
 			<div class="col-lg-8 col-lg-offset-2">
 
 			<center>	<h1>Marcus Nystrand</h1></center>
-				<p>Attending a 3-year BFA in Visual Communication at Beckmans College of Design. Right now heavily interested in 3D illustration and motion design. <br><br> Contact: nilsmarcusnystrand@gmail.com</p>
+<p>Bachelor's Degree in Fine Arts at Beckmans College of Design, Visual Communication programme.				
+Heavily interested in 3D illustration and motion design.
+				<br><br> Contact: nilsmarcusnystrand@gmail.com</p>
         <br><br><br><br><br>
 			</div>
 
