--- a/synthetictriggers.html
+++ b/synthetictriggers.html
@@ -18,14 +18,6 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
     <link href="assets/css/query.css" rel="stylesheet">
 
-    <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
   </head>
 
   <body>
@@ -57,12 +49,9 @@
 			<div class="col-lg-8 col-lg-offset-2">
 		<center><h1>Synthetic Triggers</h1></center>
 				<p>
-					
+			</div>					
 <div class="col-lg-10 col-lg-offset-1 mthalf">
-<style>.embed-container { position: relative; padding-bottom: 46.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://player.vimeo.com/video/269930636' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
-
-<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://player.vimeo.com/video/200268803' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
-	
+<style>.embed-container { position: relative; padding-bottom: 46.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://player.vimeo.com/video/269930636' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>	
 	
 Millions of people all over the world regularly watch videos where someone creates sounds using various objects and whispers into a microphone. This is part of the hunt for so-called tingles: warm, relaxing “brain massage” which can best be produced by audio and visual stimuli. The phenomenon has been popularized as Autonomous Sensory Meridian Response (ASMR). 
 <br><br>
