--- a/synthetictriggers.html
+++ b/synthetictriggers.html
@@ -60,11 +60,11 @@ Almost all ASMR videos have a person present to a greater or lesser extent. In s
 I have created my own animated ASMR material, free from human presence. I have also tested the material quantitatively in a digital survey and the results have been summarized in a film. The survey opened on April 23rd and closed on May 14th 2018 with 560 finished submissions. 
 <br><br>
 Below are the ten objects of the survey.
-<br><br>
-        
-        
-        </p>
-
+<br><br>    
+    </p>
+</div> 
+		
+<div class="col-lg-10 col-lg-offset-1 mthalf">
 <img class="img-responsive imgdouble" src="assets/img/synthetic_triggers/marcus_nystrand_synthetic_triggers_1.jpg"><a/>
 <img class="img-responsive imgdouble" src="assets/img/synthetic_triggers/marcus_nystrand_synthetic_triggers_2.jpg"><a/>
 <img class="img-responsive imgdouble" src="assets/img/synthetic_triggers/marcus_nystrand_synthetic_triggers_3.jpg"><a/>
