--- a/synthetictriggers.html
+++ b/synthetictriggers.html
@@ -65,16 +65,16 @@ Below are the ten objects of the survey.
 </div> 
 		
 <div class="col-lg-10 col-lg-offset-1 mthalf">
-<img class="img-responsive imgdouble" src="assets/img/synthetic_triggers/marcus_nystrand_synthetic_triggers_1.jpg"><a/>
-<img class="img-responsive imgdouble" src="assets/img/synthetic_triggers/marcus_nystrand_synthetic_triggers_2.jpg"><a/>
-<img class="img-responsive imgdouble" src="assets/img/synthetic_triggers/marcus_nystrand_synthetic_triggers_3.jpg"><a/>
-<img class="img-responsive imgdouble" src="assets/img/synthetic_triggers/marcus_nystrand_synthetic_triggers_4.jpg"><a/>
-<img class="img-responsive imgdouble" src="assets/img/synthetic_triggers/marcus_nystrand_synthetic_triggers_5.jpg"><a/>
-<img class="img-responsive imgdouble" src="assets/img/synthetic_triggers/marcus_nystrand_synthetic_triggers_6.jpg"><a/>
-<img class="img-responsive imgdouble" src="assets/img/synthetic_triggers/marcus_nystrand_synthetic_triggers_7.jpg"><a/>
-<img class="img-responsive imgdouble" src="assets/img/synthetic_triggers/marcus_nystrand_synthetic_triggers_8.jpg"><a/>
-<img class="img-responsive imgdouble" src="assets/img/synthetic_triggers/marcus_nystrand_synthetic_triggers_9.jpg"><a/>
-<img class="img-responsive imgdouble" src="assets/img/synthetic_triggers/marcus_nystrand_synthetic_triggers_10.jpg"><a/>
+<img class="img-responsive imgdouble imgdouble1" src="assets/img/synthetic_triggers/marcus_nystrand_synthetic_triggers_1.jpg"><a/>
+<img class="img-responsive imgdouble imgdouble2" src="assets/img/synthetic_triggers/marcus_nystrand_synthetic_triggers_2.jpg"><a/>
+<img class="img-responsive imgdouble imgdouble1" src="assets/img/synthetic_triggers/marcus_nystrand_synthetic_triggers_3.jpg"><a/>
+<img class="img-responsive imgdouble imgdouble2" src="assets/img/synthetic_triggers/marcus_nystrand_synthetic_triggers_4.jpg"><a/>
+<img class="img-responsive imgdouble imgdouble1" src="assets/img/synthetic_triggers/marcus_nystrand_synthetic_triggers_5.jpg"><a/>
+<img class="img-responsive imgdouble imgdouble2" src="assets/img/synthetic_triggers/marcus_nystrand_synthetic_triggers_6.jpg"><a/>
+<img class="img-responsive imgdouble imgdouble1" src="assets/img/synthetic_triggers/marcus_nystrand_synthetic_triggers_7.jpg"><a/>
+<img class="img-responsive imgdouble imgdouble2" src="assets/img/synthetic_triggers/marcus_nystrand_synthetic_triggers_8.jpg"><a/>
+<img class="img-responsive imgdouble imgdouble1" src="assets/img/synthetic_triggers/marcus_nystrand_synthetic_triggers_9.jpg"><a/>
+<img class="img-responsive imgdouble imgdouble2" src="assets/img/synthetic_triggers/marcus_nystrand_synthetic_triggers_10.jpg"><a/>
 
 
 			</div><! --/row -->
