--- a/synthetictriggers.html
+++ b/synthetictriggers.html
@@ -57,7 +57,7 @@ Millions of people all over the world regularly watch videos where someone creat
 <br><br>
 Almost all ASMR videos have a person present to a greater or lesser extent. In some of them the person sits close to the camera and pays intrusive attention to the watcher. In others, the person only shows her hands and remains silent while the sound is created. This project examines whether a human presence is necessary in order to trigger ASMR or whether the tactile experience can be generated via animated graphic objects. 
 <br><br>
-I have created my own animated ASMR material, free from human presence. I have also tested the material quantitatively in a digital survey and the results have been summarized in a film. The survey opened on April 23rd and closed on May 14th 2018 with 560 finished submissions. 
+I have created my own animated  <a class="link a:hover" href="https://www.youtube.com/channel/UCJz5-cftF7SMwu7n4EpRM7Q/" target="_blank">ASMR material</a>, free from human presence. I have also tested the material quantitatively in a <a class="link a:hover" href="http://synthetictriggers.github.io/" target="_blank">digital survey</a> and the results are summarized in the video above. The survey opened on April 23rd and closed on May 14th 2018 with 560 finished submissions. 
 <br><br>
 Below are the ten objects of the survey.
 <br><br>    
