--- a/cryohabitat.html
+++ b/cryohabitat.html
@@ -61,7 +61,7 @@
           The idea is to thaw them in the future and reintroduce them to their natural habitat, but that requires the global warming to be reduced.
           While waiting for this, the cryohabitat will be their new home.
 <br><br>
-          These 16 coral species were 3D-modeled, printed and placed in a physical interpretation of the cryohabitat, for an exhibition at Svenskt Tenn in Stockholm.
+          These 16 coral species were 3D-modeled, printed and placed in a physical interpretation of the cryohabitat, for an exhibition at Svenskt Tenn in Stockholm January 2017.
           Feel free to download the model pack <a class="link a:hover" href="http://www.thingiverse.com/thing:2033856" target="_blank">here</a>.
 </p>
 			</div>
