--- a/about.html
+++ b/about.html
@@ -1,85 +1,43 @@
-<script language="Javascript">
-<!--
-if (top.location != document.location)
-top.location = document.location;
-//-->
-</script>
-<!DOCTYPE html>
+<!doctype html>
+
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="assets/ico/favicon.ico">
+<head>
+  <meta charset="utf-8">
 
-    <title>Marcus Nystrand</title>
+  <title>Marcus Nystrand</title>
+  <meta name="description" content="Marcus Nystrand">
+  <meta name="author" content="SitePoint">
 
-    <!-- Bootstrap core CSS -->
-    <link href="assets/css/bootstrap.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/mediaquerys.css">
+  <link rel="stylesheet" href="css/underlines.css">
 
-    <!-- Custom styles for this template -->
-    <link href="assets/css/style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
+</head>
 
-    <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+<body>
+<div class="allwrap">
+  <div class="navwrap">
+    <a href="index.html"><div class="nav-left">projects</div></a>
+    <a href="about.html"><div class="nav-right">about<br><hr class="active-about"></div></a>
+    <div class="title">Marcus Nystrand</div>
+  </div>
 
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
+<div class="aboutwrap largetext">
 
-  <body>
+  <div class="about verticalspacing">
+  Recently got my Bachelor's Degree in Fine Arts at Beckmans College of Design, Visual Communication programme. Heavily interested in 3D illustration and motion design. Currently working as a graphic designer for a fin-tech startup.
+  <br><br>
+<a class="underline-thick" href="CV_Marcus_Nystrand_2019-03-15.pdf" target="_blank">Click here for CV</a>
+  <br><br>
 
-    <!-- Static navbar -->
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="index.html">Marcus Nystrand</a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="index.html">Projects</a></li>
-            <li class="active"><a href="about.html">About</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </div>
+</div>
+<div class="about floatright verticalspacing">
+Contact:<br>
+nilsmarcusnystrand@gmail.com
 
+</div>
+</div>
 
-
-	<div class="container">
-		<div class="row left mt mb">
-			<div class="col-lg-8 col-lg-offset-2">
-
-			<center>	<h1>Marcus Nystrand</h1></center>
-<p>Bachelor's Degree in Fine Arts at Beckmans College of Design, Visual Communication programme.				
-Heavily interested in 3D illustration and motion design.
-				<br><br> Contact: nilsmarcusnystrand@gmail.com</p>
-        <br><br><br><br><br>
-			</div>
-
-		</div><! --/row -->
-	</div><! --/container -->
-<br><br><br><br><br><br><br><br><br><br><br><br>
-
-
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-  </body>
+</div>
+</body>
 </html>
