--- a/meursault.html
+++ b/meursault.html
@@ -1,80 +1,55 @@
-<!DOCTYPE html>
+<!doctype html>
+
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="assets/ico/favicon.ico">
+<head>
+  <meta charset="utf-8">
 
-    <title>Marcus Nystrand</title>
+  <title>Marcus Nystrand</title>
+  <meta name="description" content="Marcus Nystrand">
+  <meta name="author" content="SitePoint">
 
-    <!-- Bootstrap core CSS -->
-    <link href="assets/css/bootstrap.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/mediaquerys.css">
 
-    <!-- Custom styles for this template -->
-    <link href="assets/css/style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
+</head>
 
-    <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+<body>
+<div class="allwrap">
+  <div class="navwrap">
+    <a href="index.html"><div class="nav-left">projects<br><hr class="active-projects"></div></a>
+    <a href="about.html"><div class="nav-right">about</div></a>
+    <div class="title">18069 Meursault, Arthur<br></div>
+  </div>
 
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
+  <div class='embed-container-16-9'>
+    <iframe src="https://player.vimeo.com/video/128262856" width="640" height="272" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    </iframe></div>
 
-  <body>
+  <div class="mainwrap">
 
-    <!-- Static navbar -->
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="index.html">Marcus Nystrand</a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="index.html">Projects</a></li>
-            <li><a href="about.html">About</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </div>
+    <div class="description">
+      This was a part of my application to Beckmans College of Design and the task was to create a book cover for The Stranger by Albert Camus.
+      The book is written in first-person and is about Arthur Meursault, who is sent to prison in 1950s Algeria for murder.
+      Based on this sentence from the book, I created his belongings box from prison:
 
-  <section id="works"></section>
-	<div class="container">
-		<div class="row left mt mb">
-			<div class="col-lg-8 col-lg-offset-2">
-		<center><h1>18069 Meursault, Arthur</h1></center>
-				<p>This was a part of my application to Beckmans College of Design and the task was to create a book cover for The Stranger by Albert Camus. The book is written in first-person and is about Arthur Meursault, who is sent to prison in 1950s Algeria for murder. Based on this sentence from the book, I created his belongings box from prison:
-        <br><br>“When I was brought to the prison, they took away my belt, my shoelaces, and the contents of my pockets, including my cigarettes”.
-        <br><br>The box also contains his diary, in which the whole story is taking place. That means I had to hand-write the whole book, in French, for it too feel authentic.
-        <br><br>Finally I sent the box to Beckmans jury-member Eric Ericsson, under cover of a made-up story about him being the last potential relative to Arthur Meursault. The idea was to make him feel as if the box was accidently sent to him, making him curious and eventually snooping and reading the diary (which is the book). </p>
-			</div>
-			<div class="col-lg-10 col-lg-offset-1 mthalf">
-			<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://player.vimeo.com/video/128262856' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
-
-			</div><! --/row -->
-		</div><! --/container -->
-	</div><! --/social -->
+<br><br>
+“When I was brought to the prison, they took away my belt, my shoelaces, and the contents of my pockets, including my cigarettes”.
+<br><br>
+The box also contains his diary, in which the whole story is taking place.
+That means I had to hand-write the whole book, in French, for it too feel authentic.
+<br><br>
+Finally I sent the box to Beckmans jury-member Eric Ericsson, under cover of a made-up story about him being the last potential relative to Arthur Meursault.
+The idea was to make him feel as if the box was accidently sent to him, making him curious and eventually snooping and reading the diary (which is the book).
+</div>
 
 
 
+<div class="gallery verticalspacing">
+<img class="imggrid-fullwidth" src="img/meursault/meursault_brev.jpg">
 
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-  </body>
+</div>
+  </div>
+<br><br><br><br>
+</div>
+</body>
 </html>
