--- a/butterflyeffect.html
+++ b/butterflyeffect.html
@@ -1,89 +1,55 @@
-<!DOCTYPE html>
+<!doctype html>
+
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="assets/ico/favicon.ico">
+<head>
+  <meta charset="utf-8">
 
-    <title>Marcus Nystrand</title>
+  <title>Marcus Nystrand</title>
+  <meta name="description" content="Marcus Nystrand">
+  <meta name="author" content="SitePoint">
 
-    <!-- Bootstrap core CSS -->
-    <link href="assets/css/bootstrap.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/mediaquerys.css">
 
-    <!-- Custom styles for this template -->
-    <link href="assets/css/style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
-    <link href="assets/css/query.css" rel="stylesheet">
+</head>
 
-    <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+<body>
+<div class="allwrap">
+  <div class="navwrap">
+    <a href="index.html"><div class="nav-left">projects<br><hr class="active-projects"></div></a>
+    <a href="about.html"><div class="nav-right">about</div></a>
+    <div class="title">The Butterfly Effect<br></div>
+  </div>
 
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
+  <div class='embed-container-16-9'>
+    <iframe src="https://player.vimeo.com/video/200268803" width="640" height="272" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    </iframe></div>
 
-  <body>
+  <div class="mainwrap">
 
-    <!-- Static navbar -->
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="index.html">Marcus Nystrand</a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="index.html">Projects</a></li>
-            <li><a href="about.html">About</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </div>
+    <div class="description">
+Dat Danh's material-focused collection explores the phenomenon called the "butterfly effect".
+By manipulating and destroying the materials he created five outfits, all representing different stages of the road to complete chaos.
+Video concept & production was done by me.</div>
 
-  <section id="works"></section>
-	<div class="container">
-		<div class="row left mt mb">
-			<div class="col-lg-8 col-lg-offset-2">
-		<center><h1>The Butterfly Effect</h1></center>
-				<p>Fashion designer Dat Danh made this collection to talk about how small things can evolve beyond control and have huge impact on our lives. By manipulating and destroying the materials he created five outfits, all representing different stages of the road to complete chaos. Video concept & production was done by me. </p>
-			</div>
-			<div class="col-lg-10 col-lg-offset-1 mthalf">
-
-      <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://player.vimeo.com/video/200268803' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
-<br>
-      <img class="img-responsive imgdouble" src="assets/img/butterflyeffect/outfit1_detalj.jpg"><a/>
-      <img class="img-responsive imgdouble" src="assets/img/butterflyeffect/outfit1_helbild.jpg"><a/>
-      <img class="img-responsive imgdouble" src="assets/img/butterflyeffect/outfit2_detalj.jpg"><a/>
-      <img class="img-responsive imgdouble" src="assets/img/butterflyeffect/outfit2_helbild.jpg"><a/>
-      <img class="img-responsive imgdouble" src="assets/img/butterflyeffect/outfit3_detalj.jpg"><a/>
-      <img class="img-responsive imgdouble" src="assets/img/butterflyeffect/outfit3_helbild.jpg"><a/>
-      <img class="img-responsive imgdouble" src="assets/img/butterflyeffect/outfit4_detalj.jpg"><a/>
-      <img class="img-responsive imgdouble" src="assets/img/butterflyeffect/outfit4_helbild.jpg"><a/>
-      <img class="img-responsive imgdouble" src="assets/img/butterflyeffect/outfit5_detalj.jpg"><a/>
-      <img class="img-responsive imgdouble" src="assets/img/butterflyeffect/outfit5_helbild.jpg"><a/>
-
-
-			</div><! --/row -->
-		</div><! --/container -->
-	</div><! --/social -->
-
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-  </body>
+<div class="gallery verticalspacing">
+<img class="imggrid-large" src="img/butterflyeffect/outfit1_detalj.jpg">
+<img class="imggrid-large" src="img/butterflyeffect/outfit1_helbild.jpg">
+</div><div class="gallery">
+<img class="imggrid-large" src="img/butterflyeffect/outfit2_detalj.jpg">
+<img class="imggrid-large" src="img/butterflyeffect/outfit2_helbild.jpg">
+</div><div class="gallery">
+<img class="imggrid-large" src="img/butterflyeffect/outfit3_detalj.jpg">
+<img class="imggrid-large" src="img/butterflyeffect/outfit3_helbild.jpg">
+</div><div class="gallery">
+<img class="imggrid-large" src="img/butterflyeffect/outfit4_detalj.jpg">
+<img class="imggrid-large" src="img/butterflyeffect/outfit4_helbild.jpg">
+</div><div class="gallery">
+<img class="imggrid-large" src="img/butterflyeffect/outfit5_detalj.jpg">
+<img class="imggrid-large" src="img/butterflyeffect/outfit5_helbild.jpg">
+</div>
+  </div>
+<br><br><br><br>
+</div>
+</body>
 </html>
