--- a/icosa.html
+++ b/icosa.html
@@ -1,98 +1,52 @@
-<!DOCTYPE html>
+<!doctype html>
+
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="assets/ico/favicon.ico">
+<head>
+  <meta charset="utf-8">
 
-    <title>Marcus Nystrand</title>
+  <title>Marcus Nystrand</title>
+  <meta name="description" content="Marcus Nystrand">
+  <meta name="author" content="SitePoint">
 
-    <!-- Bootstrap core CSS -->
-    <link href="assets/css/bootstrap.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="assets/css/style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
-    <link href="assets/css/query.css" rel="stylesheet">
-
-    <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-
-  <body>
-
-    <!-- Static navbar -->
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="index.html">Marcus Nystrand</a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="index.html">Projects</a></li>
-            <li><a href="about.html">About</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </div>
-
-  <section id="works"></section>
-	<div class="container">
-		<div class="row left mt mb">
-			<div class="col-lg-8 col-lg-offset-2">
-		<center><h1>Club Icosa</h1></center>
-				<p>Me and Matilda Dahlgren were challenged to market a new sports drink called Maurten.
-          The drink has only five ingredients and comes in powder form.
-          The main selling point for Maurten is its so called hydrogel technology, which makes it easier for the stomach to absorb it.<br><br>
-          The drink is originally meant for elite marathon runners only, but we decided to go another route.
-          We started thinking; what other people are also moving their bodies for several hours straight? <br><br>
-          The answer is ravers. <br><br>
-          Icosa is a club concept where Maurten is being sold to fuel the late night dancers.</p>
-			</div>
-			<div class="col-lg-10 col-lg-offset-1 mthalf">
-			<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://player.vimeo.com/video/214413742' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
-
-<p><b>Concept video/visuals.</b></p>
-<br>
-<img class="img-responsive imgdoubletext1" src="assets/img/icosa/flagga_wave.jpg">
-<img class="img-responsive imgdoubletext2" src="assets/img/icosa/flagga_still.jpg">
-<p><b>The flag of Icosa.<b></p>
-<br>
-<p><img class="img-responsive" src="assets/img/icosa/posters.jpg"></p> <b><p>Posters.<b></p>
-<br>
-<p><img class="img-responsive" src="assets/img/icosa/pasar.jpg"></p> <b><p>Bags with Maurten-powder. The backside has instructions and table of contents.<b></p>
-<br>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/mediaquerys.css">
 
 
+</head>
+
+<body>
+<div class="allwrap">
+  <div class="navwrap">
+    <a href="index.html"><div class="nav-left">projects<br><hr class="active-projects"></div></a>
+    <a href="about.html"><div class="nav-right">about</div></a>
+    <div class="title">Icosa<br></div>
+  </div>
+
+  <div class='embed-container-16-9'>
+    <iframe src="https://player.vimeo.com/video/214413742" width="640" height="272" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    </iframe></div>
+
+  <div class="mainwrap">
 
 
+    <div class="description">
+      Me and Matilda Dahlgren were challenged to market a new sports drink called Maurten.
+      The drink has only five ingredients and comes in powder form.
+      The main selling point for Maurten is its so called hydrogel technology, which makes it easier for the stomach to absorb it.
+<br><br>
+The drink is originally meant for elite marathon runners only, but we decided to go another route.
+Icosa is a club concept where Maurten is being sold to fuel the late night dancers.
+<br><br>
+Below are images of the Icosa flag and the Icosa powder bags.
+</div>
 
+<div class="gallery verticalspacing">
+<img class="imggrid-large" src="img/icosa/icosa_flag.jpg">
+<img class="imggrid-large" src="img/icosa/icosa_bags.jpg">
 
-			</div><! --/row -->
-		</div><! --/container -->
-	</div><! --/social -->
-
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-  </body>
+</div>
+  </div>
+<br><br><br><br>
+</div>
+</body>
 </html>
