--- a/index.html
+++ b/index.html
@@ -1,110 +1,207 @@
-<script language="Javascript">
-<!--
-if (top.location != document.location)
-top.location = document.location;
-//-->
-</script>
-<!DOCTYPE html>
+<!doctype html>
+
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="assets/ico/favicon.ico">
+<head>
+  <meta charset="utf-8">
 
-    <title>Marcus Nystrand</title>
+  <title>Marcus Nystrand</title>
+  <meta name="description" content="Marcus Nystrand">
+  <meta name="author" content="SitePoint">
 
-    <!-- Bootstrap core CSS -->
-    <link href="assets/css/bootstrap.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/mediaquerys.css">
+  <link rel="stylesheet" href="css/underlines.css">
 
-    <!-- Custom styles for this template -->
-    <link href="assets/css/style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
+</head>
 
-    <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+<body>
+<div class="allwrap">
 
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
+  <div class="navwrap">
+    <a href="index.html"><div class="nav-left">projects<br><hr class="active-projects"></div></a>
+    <a href="about.html"><div class="nav-right">about</div></a>
+    <a href="about.html"><div class="title">Marcus Nystrand</div></a>
+  </div>
 
-  <body>
+  <div class="mainwrap">
 
-    <!-- Static navbar -->
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="index.html">Marcus Nystrand</a>
+    <a href="synthetictriggers.html">
+      <div class="projectrow">
+        <div>
+          <img width="100%" src="img/thumbs/thumb_st.gif">
         </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="index.html">Projects</a></li>
-            <li><a href="about.html">About</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
+        <div class="rollingtitle largetext">
+          • Synthetic Triggers • Synthetic Triggers • Synthetic Triggers
+          • Synthetic Triggers • Synthetic Triggers • Synthetic Triggers
+          • Synthetic Triggers • Synthetic Triggers • Synthetic Triggers
+          • Synthetic Triggers • Synthetic Triggers • Synthetic Triggers
+          • Synthetic Triggers • Synthetic Triggers • Synthetic Triggers
+          • Synthetic Triggers • Synthetic Triggers • Synthetic Triggers
+          • Synthetic Triggers • Synthetic Triggers • Synthetic Triggers
+          • Synthetic Triggers • Synthetic Triggers • Synthetic Triggers
+          • Synthetic Triggers • Synthetic Triggers • Synthetic Triggers
+          • Synthetic Triggers • Synthetic Triggers • Synthetic Triggers
+        </div>
       </div>
-    </div>
+    </a>
 
-
-	<section id="works"></section>
-	<div class="container">
-		<div class="row centered mt mb">
-
-	<div class="col-lg-4 col-md-4 col-sm-4 gallery imgWrap">
-        <a href="synthetictriggers.html"><img src="assets/img/thumbs/thumb_synthetic_triggers.jpg" class="img-responsive"><p class="imgDescription">Synthetic Triggers</p></a>
-      </div>		
-      <div class="col-lg-4 col-md-4 col-sm-4 gallery imgWrap">
-        <a href="theglove.html"><img src="assets/img/thumbs/thumb_theglove.jpg" class="img-responsive"><p class="imgDescription">Creation of the Glove</p></a>
+    <a href="cotg.html">
+      <div class="projectrow">
+        <div class="thumbnail">
+          <img width="100%" src="img/thumbs/thumb_cotg.gif">
+        </div>
+        <div class="rollingtitle largetext">
+          • Creation of the Glove • Creation of the Glove • Creation of the Glove
+          • Creation of the Glove • Creation of the Glove • Creation of the Glove
+          • Creation of the Glove • Creation of the Glove • Creation of the Glove
+          • Creation of the Glove • Creation of the Glove • Creation of the Glove
+          • Creation of the Glove • Creation of the Glove • Creation of the Glove
+          • Creation of the Glove • Creation of the Glove • Creation of the Glove
+          • Creation of the Glove • Creation of the Glove • Creation of the Glove
+          • Creation of the Glove • Creation of the Glove • Creation of the Glove
+          • Creation of the Glove • Creation of the Glove • Creation of the Glove
+        </div>
       </div>
-      <div class="col-lg-4 col-md-4 col-sm-4 gallery imgWrap">
-        <a href="icosa.html"><img src="assets/img/thumbs/thumb_icosa.jpg" class="img-responsive"><p class="imgDescription">Icosa</p></a>
+    </a>
+
+    <a href="icosa.html">
+      <div class="projectrow">
+        <div class="thumbnail">
+          <img width="100%" src="img/thumbs/thumb_icosa.gif">
+        </div>
+        <div class="rollingtitle largetext">
+          • Icosa • Icosa • Icosa • Icosa • Icosa • Icosa • Icosa • Icosa • Icosa
+          • Icosa • Icosa • Icosa • Icosa • Icosa • Icosa • Icosa • Icosa • Icosa
+          • Icosa • Icosa • Icosa • Icosa • Icosa • Icosa • Icosa • Icosa • Icosa
+          • Icosa • Icosa • Icosa • Icosa • Icosa • Icosa • Icosa • Icosa • Icosa
+          • Icosa • Icosa • Icosa • Icosa • Icosa • Icosa • Icosa • Icosa • Icosa
+          • Icosa • Icosa • Icosa • Icosa • Icosa • Icosa • Icosa • Icosa • Icosa
+          • Icosa • Icosa • Icosa • Icosa • Icosa • Icosa • Icosa • Icosa • Icosa
+          • Icosa • Icosa • Icosa • Icosa • Icosa • Icosa • Icosa • Icosa • Icosa
+          • Icosa • Icosa • Icosa • Icosa • Icosa • Icosa • Icosa • Icosa • Icosa
+        </div>
       </div>
-      <div class="col-lg-4 col-md-4 col-sm-4 gallery imgWrap">
-	<a href="cryohabitat.html"><img src="assets/img/thumbs/thumb_kryohabitat.jpg" class="img-responsive"><p class="imgDescription">Cryohabitat</p></a>
-	</div>
-	<div class="col-lg-4 col-md-4 col-sm-4 gallery imgWrap">
-	<a href="randomobjects.html"><img src="assets/img/thumbs/thumb_random_objects.jpg" class="img-responsive"><p class="imgDescription">Random Objects<br>3D Model Pack</p></a>
-	</div>
-	<div class="col-lg-4 col-md-4 col-sm-4 gallery imgWrap">
-        <a href="celsing.html"><img src="assets/img/thumbs/thumb_celsing.jpg" class="img-responsive"><p class="imgDescription">The Sadventures of<br>Peter Celsing</p></a>
+    </a>
+
+    <a href="kryohabitat.html">
+      <div class="projectrow">
+        <div class="thumbnail">
+          <img width="100%" src="img/thumbs/thumb_kryohabitat_2.jpg">
+        </div>
+        <div class="rollingtitle largetext">
+          • Kryohabitat • Kryohabitat • Kryohabitat • Kryohabitat • Kryohabitat
+          • Kryohabitat • Kryohabitat • Kryohabitat • Kryohabitat • Kryohabitat
+          • Kryohabitat • Kryohabitat • Kryohabitat • Kryohabitat • Kryohabitat
+          • Kryohabitat • Kryohabitat • Kryohabitat • Kryohabitat • Kryohabitat
+          • Kryohabitat • Kryohabitat • Kryohabitat • Kryohabitat • Kryohabitat
+          • Kryohabitat • Kryohabitat • Kryohabitat • Kryohabitat • Kryohabitat
+          • Kryohabitat • Kryohabitat • Kryohabitat • Kryohabitat • Kryohabitat
+          • Kryohabitat • Kryohabitat • Kryohabitat • Kryohabitat • Kryohabitat
+          • Kryohabitat • Kryohabitat • Kryohabitat • Kryohabitat • Kryohabitat
+          • Kryohabitat • Kryohabitat • Kryohabitat • Kryohabitat • Kryohabitat
+        </div>
       </div>
-      <div class="col-lg-4 col-md-4 col-sm-4 gallery imgWrap">
-      	<a href="butterflyeffect.html"><img src="assets/img/thumbs/thumb_butterfly.jpg" class="img-responsive"><p class="imgDescription">The Butterfly Effect</p></a>
+    </a>
+
+    <a href="randomobjects.html">
+      <div class="projectrow">
+        <div class="thumbnail">
+          <img width="100%" src="img/thumbs/thumb_ro.jpg">
+        </div>
+        <div class="rollingtitle largetext">
+          • Random Objects • Random Objects • Random Objects • Random Objects
+          • Random Objects • Random Objects • Random Objects • Random Objects
+          • Random Objects • Random Objects • Random Objects • Random Objects
+          • Random Objects • Random Objects • Random Objects • Random Objects
+          • Random Objects • Random Objects • Random Objects • Random Objects
+          • Random Objects • Random Objects • Random Objects • Random Objects
+          • Random Objects • Random Objects • Random Objects • Random Objects
+          • Random Objects • Random Objects • Random Objects • Random Objects
+          • Random Objects • Random Objects • Random Objects • Random Objects
+          • Random Objects • Random Objects • Random Objects • Random Objects
+        </div>
       </div>
-      <div class="col-lg-4 col-md-4 col-sm-4 gallery imgWrap">
-        <a href="gradshow2016.html"><img src="assets/img/thumbs/thumb_gradshow.jpg" class="img-responsive"><p class="imgDescription">Fashion Show Visuals</p></a>
+    </a>
+
+    <a href="sadventures.html">
+      <div class="projectrow">
+        <div class="thumbnail">
+          <img width="100%" src="img/thumbs/thumb_celsing.jpg">
+        </div>
+        <div class="rollingtitle largetext">
+          • The Sadventures of Peter Celsing • The Sadventures of Peter Celsing
+          • The Sadventures of Peter Celsing • The Sadventures of Peter Celsing
+          • The Sadventures of Peter Celsing • The Sadventures of Peter Celsing
+          • The Sadventures of Peter Celsing • The Sadventures of Peter Celsing
+          • The Sadventures of Peter Celsing • The Sadventures of Peter Celsing
+          • The Sadventures of Peter Celsing • The Sadventures of Peter Celsing
+          • The Sadventures of Peter Celsing • The Sadventures of Peter Celsing
+          • The Sadventures of Peter Celsing • The Sadventures of Peter Celsing
+          • The Sadventures of Peter Celsing • The Sadventures of Peter Celsing
+          • The Sadventures of Peter Celsing • The Sadventures of Peter Celsing
+        </div>
       </div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery imgWrap">
-				<a href="meursault.html"><img src="assets/img/thumbs/thumb_meursault.jpg" class="img-responsive"><p class="imgDescription">18069 Arthur, Meursault</p></a>
+    </a>
+
+    <a href="butterflyeffect.html">
+      <div class="projectrow">
+        <div class="thumbnail">
+          <img width="100%" src="img/thumbs/thumb_butterfly.gif">
+        </div>
+        <div class="rollingtitle largetext">
+          • The Butterfly Effect • The Butterfly Effect • The Butterfly Effect
+          • The Butterfly Effect • The Butterfly Effect • The Butterfly Effect
+          • The Butterfly Effect • The Butterfly Effect • The Butterfly Effect
+          • The Butterfly Effect • The Butterfly Effect • The Butterfly Effect
+          • The Butterfly Effect • The Butterfly Effect • The Butterfly Effect
+          • The Butterfly Effect • The Butterfly Effect • The Butterfly Effect
+          • The Butterfly Effect • The Butterfly Effect • The Butterfly Effect
+          • The Butterfly Effect • The Butterfly Effect • The Butterfly Effect
+          • The Butterfly Effect • The Butterfly Effect • The Butterfly Effect
+          • The Butterfly Effect • The Butterfly Effect • The Butterfly Effect
+        </div>
       </div>
+    </a>
+
+    <a href="gradshow16.html">
+      <div class="projectrow">
+        <div class="thumbnail">
+          <img width="100%" src="img/thumbs/thumb_gradshow.gif">
+        </div>
+        <div class="rollingtitle largetext">
+          • Visuals for Beckmans Graduation Show 2016 • Visuals for Beckmans Graduation Show 2016
+          • Visuals for Beckmans Graduation Show 2016 • Visuals for Beckmans Graduation Show 2016
+          • Visuals for Beckmans Graduation Show 2016 • Visuals for Beckmans Graduation Show 2016
+          • Visuals for Beckmans Graduation Show 2016 • Visuals for Beckmans Graduation Show 2016
+          • Visuals for Beckmans Graduation Show 2016 • Visuals for Beckmans Graduation Show 2016
+          • Visuals for Beckmans Graduation Show 2016 • Visuals for Beckmans Graduation Show 2016
+          • Visuals for Beckmans Graduation Show 2016 • Visuals for Beckmans Graduation Show 2016
+          • Visuals for Beckmans Graduation Show 2016 • Visuals for Beckmans Graduation Show 2016
+        </div>
+      </div>
+    </a>
+
+    <a href="meursault.html">
+      <div class="projectrow">
+        <div class="thumbnail">
+          <img width="100%" src="img/thumbs/thumb_meursault.jpg">
+        </div>
+        <div class="rollingtitle largetext">
+          • 18069 Arthur, Meursault • 18069 Arthur, Meursault • 18069 Arthur, Meursault
+          • 18069 Arthur, Meursault • 18069 Arthur, Meursault • 18069 Arthur, Meursault
+          • 18069 Arthur, Meursault • 18069 Arthur, Meursault • 18069 Arthur, Meursault
+          • 18069 Arthur, Meursault • 18069 Arthur, Meursault • 18069 Arthur, Meursault
+          • 18069 Arthur, Meursault • 18069 Arthur, Meursault • 18069 Arthur, Meursault
+          • 18069 Arthur, Meursault • 18069 Arthur, Meursault • 18069 Arthur, Meursault
+          • 18069 Arthur, Meursault • 18069 Arthur, Meursault • 18069 Arthur, Meursault
+          • 18069 Arthur, Meursault • 18069 Arthur, Meursault • 18069 Arthur, Meursault
+          • 18069 Arthur, Meursault • 18069 Arthur, Meursault • 18069 Arthur, Meursault
+        </div>
+      </div>
+    </a>
 
 
-		</div><! --/row -->
-	</div><! --/container -->
-
-
-			</div><! --/row -->
-		</div><! --/container -->
-	</div><! --/social -->
-
-
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-  </body>
+</div>
+</div>
+</body>
 </html>
