--- a/randomobjects.html
+++ b/randomobjects.html
@@ -1,78 +1,143 @@
-<!DOCTYPE html>
+<!doctype html>
+
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="assets/ico/favicon.ico">
+<head>
+  <meta charset="utf-8">
 
-    <title>Marcus Nystrand</title>
+  <title>Marcus Nystrand</title>
+  <meta name="description" content="Marcus Nystrand">
+  <meta name="author" content="SitePoint">
 
-    <!-- Bootstrap core CSS -->
-    <link href="assets/css/bootstrap.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/mediaquerys.css">
 
-    <!-- Custom styles for this template -->
-    <link href="assets/css/style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
-    <link href="assets/css/query.css" rel="stylesheet">
+</head>
 
-    <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-
-  <body>
-
-    <!-- Static navbar -->
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="index.html">Marcus Nystrand</a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="index.html">Projects</a></li>
-            <li><a href="about.html">About</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </div>
-
-  <section id="works"></section>
-	<div class="container">
-		<div class="row left mt mb">
-			<div class="col-lg-8 col-lg-offset-2">
-		<center><h1>Random Objects 3D Model Pack</h1></center>
-				<p>100 3d-models made during my internship at Wang & Söderström. </p>
-			</div>
-			<div class="col-lg-10 col-lg-offset-1 mthalf">
-				<img class="img-responsive" src="assets/img/random_objects/random_objects.jpg"><a/>
+<body>
+<div class="allwrap">
+  <div class="navwrap">
+    <a href="index.html"><div class="nav-left">projects<br><hr class="active-projects"></div></a>
+    <a href="about.html"><div class="nav-right">about</div></a>
+    <div class="title">Random Objects<br></div>
+  </div>
 
 
-			</div><! --/row -->
-		</div><! --/container -->
-	</div><! --/social -->
+  <div class="mainwrap">
 
 
+    <div class="description">
+    100 randomly designed 3D objects made during my internship at Wang & Söderström.
+    The purpose was to explore different shapes for 3D-printing.
+</div>
+
+<div class="gallery verticalspacing">
+<img class="imggrid" src="img/random_objects/thumb-000.jpg">
+<img class="imggrid" src="img/random_objects/thumb-001.jpg">
+<img class="imggrid" src="img/random_objects/thumb-002.jpg">
+<img class="imggrid" src="img/random_objects/thumb-003.jpg">
+<img class="imggrid" src="img/random_objects/thumb-004.jpg">
+<img class="imggrid" src="img/random_objects/thumb-005.jpg">
+<img class="imggrid" src="img/random_objects/thumb-006.jpg">
+<img class="imggrid" src="img/random_objects/thumb-007.jpg">
+<img class="imggrid" src="img/random_objects/thumb-008.jpg">
+<img class="imggrid" src="img/random_objects/thumb-009.jpg">
+<img class="imggrid" src="img/random_objects/thumb-010.jpg">
+<img class="imggrid" src="img/random_objects/thumb-011.jpg">
+<img class="imggrid" src="img/random_objects/thumb-011.jpg">
+<img class="imggrid" src="img/random_objects/thumb-012.jpg">
+<img class="imggrid" src="img/random_objects/thumb-013.jpg">
+<img class="imggrid" src="img/random_objects/thumb-014.jpg">
+<img class="imggrid" src="img/random_objects/thumb-015.jpg">
+<img class="imggrid" src="img/random_objects/thumb-016.jpg">
+<img class="imggrid" src="img/random_objects/thumb-017.jpg">
+<img class="imggrid" src="img/random_objects/thumb-018.jpg">
+<img class="imggrid" src="img/random_objects/thumb-019.jpg">
+<img class="imggrid" src="img/random_objects/thumb-020.jpg">
+<img class="imggrid" src="img/random_objects/thumb-021.jpg">
+<img class="imggrid" src="img/random_objects/thumb-022.jpg">
+<img class="imggrid" src="img/random_objects/thumb-023.jpg">
+<img class="imggrid" src="img/random_objects/thumb-024.jpg">
+<img class="imggrid" src="img/random_objects/thumb-025.jpg">
+<img class="imggrid" src="img/random_objects/thumb-026.jpg">
+<img class="imggrid" src="img/random_objects/thumb-027.jpg">
+<img class="imggrid" src="img/random_objects/thumb-028.jpg">
+<img class="imggrid" src="img/random_objects/thumb-029.jpg">
+<img class="imggrid" src="img/random_objects/thumb-030.jpg">
+<img class="imggrid" src="img/random_objects/thumb-031.jpg">
+<img class="imggrid" src="img/random_objects/thumb-032.jpg">
+<img class="imggrid" src="img/random_objects/thumb-033.jpg">
+<img class="imggrid" src="img/random_objects/thumb-034.jpg">
+<img class="imggrid" src="img/random_objects/thumb-035.jpg">
+<img class="imggrid" src="img/random_objects/thumb-036.jpg">
+<img class="imggrid" src="img/random_objects/thumb-037.jpg">
+<img class="imggrid" src="img/random_objects/thumb-038.jpg">
+<img class="imggrid" src="img/random_objects/thumb-039.jpg">
+<img class="imggrid" src="img/random_objects/thumb-040.jpg">
+<img class="imggrid" src="img/random_objects/thumb-041.jpg">
+<img class="imggrid" src="img/random_objects/thumb-042.jpg">
+<img class="imggrid" src="img/random_objects/thumb-043.jpg">
+<img class="imggrid" src="img/random_objects/thumb-044.jpg">
+<img class="imggrid" src="img/random_objects/thumb-045.jpg">
+<img class="imggrid" src="img/random_objects/thumb-046.jpg">
+<img class="imggrid" src="img/random_objects/thumb-047.jpg">
+<img class="imggrid" src="img/random_objects/thumb-048.jpg">
+<img class="imggrid" src="img/random_objects/thumb-049.jpg">
+<img class="imggrid" src="img/random_objects/thumb-050.jpg">
+<img class="imggrid" src="img/random_objects/thumb-051.jpg">
+<img class="imggrid" src="img/random_objects/thumb-052.jpg">
+<img class="imggrid" src="img/random_objects/thumb-053.jpg">
+<img class="imggrid" src="img/random_objects/thumb-054.jpg">
+<img class="imggrid" src="img/random_objects/thumb-055.jpg">
+<img class="imggrid" src="img/random_objects/thumb-056.jpg">
+<img class="imggrid" src="img/random_objects/thumb-057.jpg">
+<img class="imggrid" src="img/random_objects/thumb-058.jpg">
+<img class="imggrid" src="img/random_objects/thumb-059.jpg">
+<img class="imggrid" src="img/random_objects/thumb-060.jpg">
+<img class="imggrid" src="img/random_objects/thumb-061.jpg">
+<img class="imggrid" src="img/random_objects/thumb-062.jpg">
+<img class="imggrid" src="img/random_objects/thumb-063.jpg">
+<img class="imggrid" src="img/random_objects/thumb-064.jpg">
+<img class="imggrid" src="img/random_objects/thumb-065.jpg">
+<img class="imggrid" src="img/random_objects/thumb-066.jpg">
+<img class="imggrid" src="img/random_objects/thumb-067.jpg">
+<img class="imggrid" src="img/random_objects/thumb-068.jpg">
+<img class="imggrid" src="img/random_objects/thumb-069.jpg">
+<img class="imggrid" src="img/random_objects/thumb-070.jpg">
+<img class="imggrid" src="img/random_objects/thumb-071.jpg">
+<img class="imggrid" src="img/random_objects/thumb-072.jpg">
+<img class="imggrid" src="img/random_objects/thumb-073.jpg">
+<img class="imggrid" src="img/random_objects/thumb-074.jpg">
+<img class="imggrid" src="img/random_objects/thumb-075.jpg">
+<img class="imggrid" src="img/random_objects/thumb-076.jpg">
+<img class="imggrid" src="img/random_objects/thumb-077.jpg">
+<img class="imggrid" src="img/random_objects/thumb-078.jpg">
+<img class="imggrid" src="img/random_objects/thumb-079.jpg">
+<img class="imggrid" src="img/random_objects/thumb-080.jpg">
+<img class="imggrid" src="img/random_objects/thumb-081.jpg">
+<img class="imggrid" src="img/random_objects/thumb-082.jpg">
+<img class="imggrid" src="img/random_objects/thumb-083.jpg">
+<img class="imggrid" src="img/random_objects/thumb-084.jpg">
+<img class="imggrid" src="img/random_objects/thumb-085.jpg">
+<img class="imggrid" src="img/random_objects/thumb-086.jpg">
+<img class="imggrid" src="img/random_objects/thumb-087.jpg">
+<img class="imggrid" src="img/random_objects/thumb-088.jpg">
+<img class="imggrid" src="img/random_objects/thumb-089.jpg">
+<img class="imggrid" src="img/random_objects/thumb-090.jpg">
+<img class="imggrid" src="img/random_objects/thumb-090.jpg">
+<img class="imggrid" src="img/random_objects/thumb-091.jpg">
+<img class="imggrid" src="img/random_objects/thumb-092.jpg">
+<img class="imggrid" src="img/random_objects/thumb-093.jpg">
+<img class="imggrid" src="img/random_objects/thumb-094.jpg">
+<img class="imggrid" src="img/random_objects/thumb-095.jpg">
+<img class="imggrid" src="img/random_objects/thumb-096.jpg">
+<img class="imggrid" src="img/random_objects/thumb-097.jpg">
+<img class="imggrid" src="img/random_objects/thumb-098.jpg">
+<img class="imggrid" src="img/random_objects/thumb-099.jpg">
+</div>
 
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-  </body>
+  </div>
+<br><br><br><br>
+</div>
+</body>
 </html>
