--- a/cotg.html
+++ b/cotg.html
@@ -39,11 +39,19 @@
 
     <div class="description">
 Music video illustrating the design process of fashion designer Jonas Karhumaa in his collaboration with the Swedish glove brand Handskmakaren.
-This video is a collaboration between me and Matilda Dahlgren. Below are some images from the process.</div>
+This video is a collaboration between me and Matilda Dahlgren. Below is a poster showing the five looks from Karhuumas collection plus images from the process.</div>
+
 
 <div class="gallery verticalspacing">
+<img class="imggrid-fullwidth" src="img/cotg/cotg_poster.jpg">
+</div>
+
+<div class="gallery">
+<img class="imggrid-large" src="img/cotg/cotg_fabric.gif">
+<img class="imggrid-large" src="img/cotg/cotg_hand.gif">
+</div><div class="gallery">
 <img class="imggrid-large" src="img/cotg/cotg_compositing.gif">
-<img class="imggrid-large" src="img/cotg/cotg_fabric.jpg">
+<img class="imggrid-large" src="img/cotg/cotg_set.jpg">
 </div>
 
 
