--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
 <div class="aboutwrap largetext">
 
   <div class="about verticalspacing">
-  Bachelor's Degree in Fine Arts at Beckmans College of Design, Visual Communication programme. Heavily interested in game development, motion design and 3D illustration. Currently working as a graphic designer at a fin-tech startup.
+  Bachelor's Degree of Fine Arts at Beckmans College of Design, Visual Communication programme. Heavily interested in game development, motion design and 3D illustration. Currently working as a graphic designer at a fin-tech startup.
   <br><br>
 <a class="underline-thick" href="CV_Marcus_Nystrand_2019-03-15.pdf" target="_blank">Click here for CV</a>
   <br><br>
