--- a/about.html
+++ b/about.html
@@ -21,7 +21,6 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/mediaquerys.css">
   <link rel="stylesheet" href="css/underlines.css">
-
 </head>
 
 <body>
@@ -43,7 +42,7 @@
 </div>
 <div class="about floatright verticalspacing">
 Contact:<br>
-nilsmarcusnystrand@gmail.com
+nilsmarcusnystrand<br>@gmail.com
 
 </div>
 </div>
