--- a/butterflyeffect.html
+++ b/butterflyeffect.html
@@ -20,20 +20,18 @@
 
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/mediaquerys.css">
+  <link rel="stylesheet" href="css/underlines.css">
 
 </head>
 
 <body>
 <div class="allwrap">
+
   <div class="navwrap">
     <a href="index.html"><div class="nav-left">projects<br><hr class="active-projects"></div></a>
     <a href="about.html"><div class="nav-right">about</div></a>
-    <div class="title">The Butterfly Effect<br></div>
+    <div class="title">The Butterfly Effect</div>
   </div>
-
-  <div class='embed-container-16-9'>
-    <iframe src="https://player.vimeo.com/video/200268803" width="640" height="272" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-    </iframe></div>
 
   <div class="mainwrap">
 
