--- a/cotg.html
+++ b/cotg.html
@@ -20,6 +20,7 @@
 
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/mediaquerys.css">
+  <link rel="stylesheet" href="css/underlines.css">
 
 </head>
 
