Update and rename save-the-dinos to save-the-dinos.html

--- a/save-the-dinos.html
+++ b/save-the-dinos.html
@@ -45,14 +45,26 @@ Click meteorites to shoot them with your laser and click Dinos to make them dash
 <br><br>
 Made by me in 72 hours for the game jam Ludum Dare 46.
 
+<br><br>
+
+Play the game here: 
+<a href="https://marcusnystrand.itch.io/save-the-dinos" target="_blank">
+https://marcusnystrand.itch.io/save-the-dinos
+</a>
+
 <div class="gallery verticalspacing">
 <img class="imggrid-fullwidth" src="img/cotg/cotg_poster.jpg">
 </div>
 
-<div class="gallery">
+“It took me a while to realize I can click the dinosaurs to change their direction, which changed everything. I kept them all near the side of the screen, but eventually one single fast big asteroid wiped them all up.”
+<div><div>
+BoltKey (@boltkey)
+<div><div><div>
 
-
-</div>
+“Really unforgiving, but pretty fun”
+<div><div>
+bassguitarbill (@bassguitarbill)
+<div><div><div>
 
   </div>
 
