--- a/index.html
+++ b/index.html
@@ -34,6 +34,28 @@
 
   <div class="mainwrap">
 
+    <a href="save-the-dinos.html">
+      <div class="projectrow">
+        <div>
+          <img width="100%" src="img/thumbs/thumb_save-the-dinos.gif">
+        </div>
+        <div class="rollingtitle largetext">
+          • SAVE THE DINOS! • SAVE THE DINOS! • SAVE THE DINOS!
+          • SAVE THE DINOS! • SAVE THE DINOS! • SAVE THE DINOS!
+          • SAVE THE DINOS! • SAVE THE DINOS! • SAVE THE DINOS!
+          • SAVE THE DINOS! • SAVE THE DINOS! • SAVE THE DINOS!
+          • SAVE THE DINOS! • SAVE THE DINOS! • SAVE THE DINOS!
+          • SAVE THE DINOS! • SAVE THE DINOS! • SAVE THE DINOS!
+          • SAVE THE DINOS! • SAVE THE DINOS! • SAVE THE DINOS!
+          • SAVE THE DINOS! • SAVE THE DINOS! • SAVE THE DINOS!
+          • SAVE THE DINOS! • SAVE THE DINOS! • SAVE THE DINOS!
+          • SAVE THE DINOS! • SAVE THE DINOS! • SAVE THE DINOS!
+          • SAVE THE DINOS! • SAVE THE DINOS! • SAVE THE DINOS!
+
+        </div>
+      </div>
+    </a>
+
     <a href="synthetictriggers.html">
       <div class="projectrow">
         <div>
