--- a/save-the-dinos.html
+++ b/save-the-dinos.html
@@ -47,7 +47,7 @@ Made by me in 72 hours for the game jam Ludum Dare 46.
 
 <br><br>
 
-      Play the game <a href="https://marcusnystrand.itch.io/save-the-dinos" target="_blank">here</a></u>!
+      Play the game <a href="https://marcusnystrand.itch.io/save-the-dinos" target="_blank"><u>here</u></a>!
 
 
 <div class="gallery verticalspacing">
