--- a/save-the-dinos.html
+++ b/save-the-dinos.html
@@ -45,7 +45,7 @@ Click meteorites to shoot them with your laser and click Dinos to make them dash
 
 
 <br><br>
-Made by me in 72 hours for the game jam Ludum Dare 46. 
+Made by me in 72 hours for the game jam Ludum Dare 46. The theme was "Keep it alive". 
       Play the game <a href="https://marcusnystrand.itch.io/save-the-dinos" target="_blank"><u>here</u></a>!
 <br><br>
 
