--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-<div class="allwrap">
+<div class="allwrap noselect">
 
   <div class="navwrap">
     <a href="index.html"><div class="nav-left">projects<br><hr class="active-projects"></div></a>
