update + parknig puzzle

--- a/index.html
+++ b/index.html
@@ -34,6 +34,26 @@
 
   <div class="mainwrap">
 
+    <a href="projects/parking-puzzle.html">
+      <div class="projectrow">
+        <div class="thumbnail">
+          <img width="100%" src="thumbs/thumb_parking-puzzle.gif">
+        </div>
+        <div class="rollingtitle largetext">
+          • Parking Puzzle • Parking Puzzle • Parking Puzzle 
+          • Parking Puzzle • Parking Puzzle • Parking Puzzle 
+          • Parking Puzzle • Parking Puzzle • Parking Puzzle 
+          • Parking Puzzle • Parking Puzzle • Parking Puzzle 
+          • Parking Puzzle • Parking Puzzle • Parking Puzzle 
+          • Parking Puzzle • Parking Puzzle • Parking Puzzle 
+          • Parking Puzzle • Parking Puzzle • Parking Puzzle 
+          • Parking Puzzle • Parking Puzzle • Parking Puzzle 
+          • Parking Puzzle • Parking Puzzle • Parking Puzzle 
+          • Parking Puzzle • Parking Puzzle • Parking Puzzle 
+        </div>
+      </div>
+    </a>
+
     <a href="projects/save-the-dinos.html">
       <div class="projectrow">
         <div class="thumbnail">
