--- a/projects/gradshow16.html
+++ b/projects/gradshow16.html
@@ -34,8 +34,8 @@
 
     <div class="contentwrap">
       <div class="contentdescription" style="order: 2">
-        Visuals for Beckmans Gratuation Show 2016.
-        Our aim was to create graphic interpretations based on each students' collection.
+        Visuals for Beckmans Graduation Show 2016.
+        Our aim was to create graphic interpretations based on each student's collection.
         Made in collaboration with Gustav Stockman, Lisa Borg and Tor Westerlund.
       </div>
 
