--- a/projects/meursault.html
+++ b/projects/meursault.html
@@ -34,7 +34,7 @@
 
     <div class="contentwrap">
       <div class="contentdescription" style="order: 2">
-        This was a part of my application to Beckmans College of Design and the task was to create a book cover for The
+        This was part of my application for Beckmans College of Design and the task was to create a book cover for The
         Stranger by Albert Camus.
         The book is written in first-person and is about Arthur Meursault, who is sent to prison in 1950s Algeria for
         murder.
