--- a/projects/sadventures.html
+++ b/projects/sadventures.html
@@ -33,7 +33,7 @@
     </div>
 
     <div class="contentwrap">
-      <div class="contentdescription" style="order: 2">
+      <div class="contentdescription fliporder">
         When designing Kulturhuset in Stockholm, architect Peter Celsing had a grand vision in mind.
         The building, placed right in the middle of Stockholms bank quarters, was to act as an cultural force against
         the the commercialism.
