--- a/projects/synthetictriggers.html
+++ b/projects/synthetictriggers.html
@@ -49,8 +49,11 @@
 <br><br>
     This project examines whether a human presence is necessary in order to trigger ASMR or whether the tactile experience can be generated via animated graphic objects.
 <br><br>
-    I have created my own animated  <a href="https://www.youtube.com/channel/UCJz5-cftF7SMwu7n4EpRM7Q/" target="_blank"><u>ASMR MATERIAL</u></a>, free from human presence.
-    I have also tested the material quantitatively in a <a href="http://synthetictriggers.github.io/" target="_blank"><u>DIGITAL SURVEY</u></a> and the results are summarized in the video above. The survey opened on April 23rd and closed on May 14th 2018 with 560 finished submissions.
+    I have created my own animated  
+    <a style="color: blue" href="https://www.youtube.com/channel/UCJz5-cftF7SMwu7n4EpRM7Q/" target="_blank"><u>ASMR material</u></a>, free from human presence.
+    I have also tested the material quantitatively in a
+     <a style="color: blue" href="http://synthetictriggers.github.io/" target="_blank"><u>digital survey</u></a> and the results are summarized in the video above. 
+     The survey opened on April 23rd and closed on May 14th 2018 with 560 finished submissions.
 <br><br>
     These are the ten objects of the survey.
   </div>
