--- a/projects/kryohabitat.html
+++ b/projects/kryohabitat.html
@@ -48,8 +48,7 @@
         <br><br>
         I made digital sculptures of the 16 coral species an 3D-printed them for a physical interpretation of the
         cryohabitat. This was part of an exhibition at Svenskt Tenn in Stockholm January 2017.
-        Feel free to download the model pack <a style="color: blue" class="underline"
-          href="https://www.thingiverse.com/thing:2033856/" target="_blank"><u>here</u></a>.
+        Feel free to download the model pack <a style="color: blue" href="https://www.thingiverse.com/thing:2033856/" target="_blank"><u>here</u></a>.
       </div>
 
     </div>
