--- a/projects/parking-puzzle.html
+++ b/projects/parking-puzzle.html
@@ -28,26 +28,24 @@
 <body>
   <div class="allwrap">
     <div class="navwrap">
-      <div class="title"><u>SAVE THE DINOS!</u></div>
+      <div class="title"><u>Parking Puzzle</u></div>
       <div class="navlinks"><a href="../index.html">projects</div></a>
       <div class="navlinks"><a href="../about.html">about</div></a>
     </div>
 
     <div class="contentwrap">
       <div style="order: 2" class="contentdescription">
-        Fierce meteorites hail down on Dino Land and the Dinos need to repopulate quickly before they all go down in
-        history.
-        Click meteorites to shoot them with your laser and click Dinos to make them dash in their opposite direction.
-
+        Parking Puzzle is inspired by the many times I've had to rewind and retry when parallell parking. 
+        I made it in one week for Brackeys Game Jam 2020.2. The theme was "Rewind" and Parking Puzzle ranked #80 out of 1847 entries.
         <br><br>
-        Made by me in 72 hours for the game jam Ludum Dare 46. The theme was "Keep it alive".
-        Play the game <a style="color: blue" href="https://marcusnystrand.itch.io/save-the-dinos"
-          target="_blank"><u>here</u></a>!
+        The game is about cleverly arranging various blocks to guide the car into the parking spot.
+        <br><br>
+        Play the game <a style="color: blue" href="https://marcusnystrand.itch.io/parking-puzzle" target="_blank"><u>here</u></a>!
         <br><br>
       </div>
       <div class='embed-container-16-9'>
         <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
-          src="https://player.vimeo.com/video/411790685" frameborder="0" allow="autoplay; encrypted-media"
+          src="https://player.vimeo.com/video/455194234" frameborder="0" allow="autoplay; encrypted-media"
           allowfullscreen></iframe>
       </div>
     </div>
@@ -55,12 +53,13 @@
     <div class="contentwrap">
 
       <div class="contentdescription" style="order: 1">
-        Some comments about the game.
+        Screenshots.
       </div>
 
       <div style="order: 2">
-        <img width="100%" class="imggrid" src="img/save-the-dinos/save-the-dinos-quotes.jpg">
-
+        <img width="100%" class="imggrid" src="img/parking-puzzle/Parking-Puzzle-1.png">
+        <img width="100%" class="imggrid" src="img/parking-puzzle/Parking-Puzzle-2.png">
+        <img width="100%" class="imggrid" src="img/parking-puzzle/Parking-Puzzle-3.png">
       </div>
     </div>
 
