--- a/projects/butterflyeffect.html
+++ b/projects/butterflyeffect.html
@@ -50,7 +50,7 @@
 
     <div class="contentwrap">
       <div class="contentdescription" style="order: 1">
-        The collection.
+        The collection:
       </div>
       <div class="gallery" style="order: 2">
         <img width="100%" class="imggrid" src="img/butterflyeffect/outfit1_detalj.jpg">
