--- a/projects/cotg.html
+++ b/projects/cotg.html
@@ -48,7 +48,7 @@
 
     <div class="contentwrap">
       <div class="contentdescription" style="order: 1">
-        Poster for the video.
+        Poster for the video:
       </div>
       <div style="order: 2">
         <img width="100%" class="imggrid" src="img/cotg/cotg_poster.jpg">
@@ -58,7 +58,7 @@
     <div class="contentwrap">
 
       <div class="contentdescription" style="order: 1">
-        Process images.
+        Process images:
       </div>
 
       <div class="gallery" style="order: 2">
