--- a/projects/gradshow16.html
+++ b/projects/gradshow16.html
@@ -48,7 +48,7 @@
 
     <div class="contentwrap">
       <div class="contentdescription" style="order: 1">
-        All visuals.
+        All visuals:
       </div>
       <div class="gallery" style="order: 2">
         <img width="100%" class="imggrid" src="img/gradshow16/Filippa_Borenius5.jpg">
