--- a/projects/icosa.html
+++ b/projects/icosa.html
@@ -53,7 +53,7 @@
     <div class="contentwrap">
 
       <div class="contentdescription" style="order: 1">
-        The Icosa flag.
+        The Icosa flag:
       </div>
 
       <div style="order: 2">
@@ -65,7 +65,7 @@
     <div class="contentwrap">
 
       <div class="contentdescription" style="order: 1">
-        The Icosa Powder Bags.
+        The Icosa Powder Bags:
       </div>
 
       <div style="order: 2">
