--- a/projects/parking-puzzle.html
+++ b/projects/parking-puzzle.html
@@ -53,7 +53,7 @@
     <div class="contentwrap">
 
       <div class="contentdescription" style="order: 1">
-        Screenshots.
+        Screenshots:
       </div>
 
       <div style="order: 2">
