--- a/projects/sadventures.html
+++ b/projects/sadventures.html
@@ -50,7 +50,7 @@
 
     <div class="contentwrap">
       <div class="contentdescription" style="order: 1">
-        Details.
+        Details:
       </div>
 
       <div class="gallery">
