--- a/projects/save-the-dinos.html
+++ b/projects/save-the-dinos.html
@@ -55,7 +55,7 @@
     <div class="contentwrap">
 
       <div class="contentdescription" style="order: 1">
-        Some comments about the game.
+        Some comments about the game:
       </div>
 
       <div style="order: 2">
