--- a/projects/synthetictriggers.html
+++ b/projects/synthetictriggers.html
@@ -55,7 +55,7 @@
      <a style="color: blue" href="http://synthetictriggers.github.io/" target="_blank"><u>digital survey</u></a> and the results are summarized in the video above. 
      The survey opened on April 23rd and closed on May 14th 2018 with 560 finished submissions.
 <br><br>
-    These are the ten objects of the survey.
+    These are the ten objects of the survey:
   </div>
 
   <div class="gallery">
